@@ -2,18 +2,19 @@
 
 enum {SMC=1,APM1,DS,AVG,SCM,RCM,CM,MX,ST,MM,DHS,SM,SK,APM2,ERR,TAPM,UAS,LMX};
 int t[14]={},t1[256]={},t3[256]={}; //  ={} - let VM to alloc memory and set values to 0
-int pos00,pos20,posnl,info,opr;
+int info;
 short t2[0x10000]={};
 int c1,c2,c3,ord;
-int mask,Misses;
+int Misses;
 int rlen=2, rlen1=3, rlen2=4, rlen3=5,rlenl;  // run length and 2 candidates
 int rcount1, rcount2,rcount3;  // candidate counts
 int cpos1[256]={},cpos2[256]={},cpos3[256]={},cpos4[256]={},wpos1[0x10000]={};
-int ic, bc, pc,vc, qc, lvc, wc,f4,w4,tt,x1;
+int f4,w4,x1;
 int mpw[16]= {4,4,3,2,2,2,1,1,1,1,1,1,0,0,0,0};
 int mtt[16]= {0,0,1,2,3,4,5,5,6,6,6,6,7,7,7,7};
 int m_m[13]={22, 26, 32, 37, 35, 24, 7, 31, 37, 34, 23, 29, 15};
-int c_s[12]= {36, 31, 40, 38, 30, 33, 31, 31, 38, 26, 28, 36};
+int c_s[12]= {33, 28, 42, 39, 20, 31, 32, 28, 39, 23, 25, 30};
+int c_s2[12]= {17, 15, 14, 20, 15, 11, 17, 14, 9, 13, 12, 8};
 int c_r[12]= {6, 2, 4, 6, 6, 3, 2, 2, 4, 5, 4, 5};
 int m_s[13]={9,26,65,10,51,21,20,46,33,14,3,73,12};
 int m_e[13]={1856, 2433, 1167, 782, 2303, 1523, 329, 972, 869, 3726, 1172, 1313, 63};
@@ -910,7 +911,6 @@ void doExe(int bpos,int c4){
     }
 }
 
-//some custom functions and stuff :)
 int min(int a, int b) {return a<b?a:b;}
 int max(int a, int b) {return a<b?b:a;}
 
@@ -932,7 +932,6 @@ int matchMod(int y,int bpos){
             }
             tm[h]=pos;  // update hash table
                 //if (len>3 ) printf("pos=%d len=%d ptr=%d\n", pos, len, ptr);
-            //vmx(SCM, 5, pos);
     }
     // predict match
     if (len && buf(1)==bufr(ptr-1)){
@@ -945,12 +944,10 @@ int matchMod(int y,int bpos){
 
 // update is called in VM after every bit
 int update(int y,int c0,int bpos,int c4,int pr){
-  int i,j;
-  int d,c;
-  int col,h,above;
-  int fl,matched,r,vv,order,ismatch;
+  int i,j,d,c,col,h;
+  int r,order,ismatch;
   int emask, count0;
- char s;
+  char s;
   if (bpos== 0){
        buffer[bufpos]=c4&0xff;
         bufpos++;
@@ -959,7 +956,6 @@ int update(int y,int c0,int bpos,int c4,int pr){
     c1= buf(1), c2= buf(2), c3= buf(3);
     f4= f4<<4|(c1>>4);
     w4= w4<<2|mpw[c1>>4];
-    //tt=tt<<3|mtt[c1>>4];
     //normal
     for (i=13; i>0; --i)  // update order 0-11 context hashes
     t[i]=t[i-1]*primes[i]+c1;
@@ -970,14 +966,6 @@ int update(int y,int c0,int bpos,int c4,int pr){
     vmx(RCM,1,t[10]);
     vmx(RCM,2,t[12]);
     vmx(CM, 0,t[13]);
-
-    //distance
-    //if (c1==0x00) pos00=pos;
-    //if (c1==0x20) pos20=pos;
-    //if (c1==0xff) posnl=pos;
-    //vmx(CM, 1,(min(pos-pos00,255)|(c1<<8)));
-    //vmx(CM, 1,(min(pos-pos20,255)|(c1<<8)));
-    //vmx(CM, 1,(min(pos-posnl,255)|((c1<<8)+234567)));
 
     //indirect
     d=c4&0xffff; 
@@ -1001,7 +989,6 @@ int update(int y,int c0,int bpos,int c4,int pr){
     vmx(CM, 10,(i&0xffffff));
     vmx(CM, 10,(i));
     c=c1;
-
     
     //sparse
     vmx(CM, 4, c4&0x00f0f0f0);
@@ -1014,7 +1001,6 @@ int update(int y,int c0,int bpos,int c4,int pr){
     vmx(CM, 4,c4&0x00ff00ff);
     vmx(CM, 4,c4&0xff0000ff);
     vmx(CM, 4,f4&0x00000fff);
-
     
     vmx(CM, 4,c1|buf(5)<<8);
     vmx(CM, 4,c1|buf(6)<<8);
@@ -1026,7 +1012,6 @@ int update(int y,int c0,int bpos,int c4,int pr){
     }
     vmx(CM, 4,w4&0xf0f0f0ff);
     vmx(CM, 4,( w4&63)*128+(5<<17)); 
-    
     
     vmx(SCM, 0, c1);
     vmx(SCM, 1,buf(4));
@@ -1107,7 +1092,7 @@ int update(int y,int c0,int bpos,int c4,int pr){
         State+16*pState+256*Op_BytesRead,
         ((Op_Flags&fMODE)==fAM)*16 + (Op_REX & REX_w) + (Op_o16)*4 + ((Op_Code & 0xFE)==0xE8)*2 + ((Op_Data & MultiByteOpcode)!=0 && (Op_Code & 0xF0)==0x80)
       ));
-emask = 0x04|CodeMask|MultiByteOpcode;
+    emask = 0x04|CodeMask|MultiByteOpcode;
     vmx(CM, 3,hash5(OpN( 1)&emask, OpN( 3)&emask, OpN( 5)&emask, OpN( 7)&emask, (Op_Data&emask)|(State<<11)|(Op_BytesRead<<15)|(Op_Category<<20)));
     
          // printf("%d\n",OpN( 1)&(0x04|CodeMask));
@@ -1153,9 +1138,9 @@ void block(int a,int b) {
 }
 // main is called only once after VM init.
 int main() { 
-int i,x;
+  int i,x;
   //SMC,APM1,DS,AVG,SCM,RCM,CM,MX,ST,MM,DHS,SM
-  vms(2,3,0,1,5,3,12,12+1,1,12,0,0,1,0,0,0,0,0);
+  vms(2,3,0,1,5,3,12,13,1,12,0,0,1,0,0,0,0,0);
   vmi(ST,0,144,0,0);
   vmi(SMC,0,256,1023,0);
   vmi(SMC,1,256*256,1023,0);
@@ -1163,21 +1148,20 @@ int i,x;
   vmi(RCM,0,1024,0,0); //RCM(0) mem/4
   vmi(RCM,1,1024,0,0); //RCM(1) mem/4 400000 4194304/4096=1024
   vmi(RCM,2,2048,0,0); //RCM(2) mem/2 800000 8388608/4096=2048
-  vmi(CM,0,32*4096,9+c_r[0]*256+c_s[0]*0x10000,0);  //CM(0) mem*32, 9 contexts //normal
-  vmi(CM,1,4096/2,2 +c_r[1]*256+c_s[1]*0x10000,0);  //CM(1) mem/2, 3 contexts  //dictance
-  vmi(CM,2,1*4096,4 +c_r[2]*256+c_s[2]*0x10000,0);   //indirect 1000000 /4096=4096
-  vmi(CM,3,8*4096,10+1+c_r[3]*256+c_s[3]*0x10000,0); //exe
-  vmi(CM,4,2*4096,38+c_r[4]*256+c_s[4]*0x10000,0);  //sparse
-  vmi(CM,5,4096/2 ,3+c_r[5]*256+c_s[5]*0x10000,0); //record
-  vmi(CM,6,4096/2,3 +c_r[6]*256+c_s[6]*0x10000,0);  //record
-  vmi(CM,7,1*4096,3 +c_r[7]*256+c_s[7]*0x10000,0);   //record
-  vmi(CM,8,2*4096,3 +c_r[8]*256+c_s[8]*0x10000,0);   //record
-  vmi(CM,9,4*4096,10+c_r[9]*256+c_s[9]*0x10000,0); //exe
-  vmi(CM,10,1*4096,3+c_r[10]*256+c_s[10]*0x10000,0);
-  vmi(CM,11,1*4096,3+c_r[11]*256+c_s[11]*0x10000,0);
+  vmi(CM,0,32*4096,9+c_r[0]*256+c_s[0]*0x10000+c_s2[0]*0x1000000,0);  //CM(0) mem*32, 9 contexts //normal
+  vmi(CM,1,4096/2,2 +c_r[1]*256+c_s[1]*0x10000+c_s2[1]*0x1000000,0);  //CM(1) mem/2, 3 contexts  //dictance
+  vmi(CM,2,1*4096,4 +c_r[2]*256+c_s[2]*0x10000+c_s2[2]*0x1000000,0);   //indirect 1000000 /4096=4096
+  vmi(CM,3,8*4096,11+c_r[3]*256+c_s[3]*0x10000+c_s2[3]*0x1000000,0); //exe
+  vmi(CM,4,2*4096,38+c_r[4]*256+c_s[4]*0x10000+c_s2[4]*0x1000000,0);  //sparse
+  vmi(CM,5,4096/2 ,3+c_r[5]*256+c_s[5]*0x10000+c_s2[5]*0x1000000,0); //record
+  vmi(CM,6,4096/2,3 +c_r[6]*256+c_s[6]*0x10000+c_s2[6]*0x1000000,0);  //record
+  vmi(CM,7,1*4096,3 +c_r[7]*256+c_s[7]*0x10000+c_s2[7]*0x1000000,0);   //record
+  vmi(CM,8,2*4096,3 +c_r[8]*256+c_s[8]*0x10000+c_s2[8]*0x1000000,0);   //record
+  vmi(CM,9,4*4096,10+c_r[9]*256+c_s[9]*0x10000+c_s2[9]*0x1000000,0); //exe
+  vmi(CM,10,1*4096,3+c_r[10]*256+c_s[10]*0x10000+c_s2[10]*0x1000000,0);
+  vmi(CM,11,1*4096,3+c_r[11]*256+c_s[11]*0x10000+c_s2[11]*0x1000000,0);
   for (i=0;i<5;i++)
       vmi(SCM,i,16,0,0);
-  //vmi(SCM,5,17,0,0);
   vmi(MX,0,m_s[0]+256*m_e[0]+0x1000000*m_m[0], 264,0);
   vmi(MX,1,m_s[1]+256*m_e[1]+0x1000000*m_m[1], 256,0);
   vmi(MX,2,m_s[2]+256*m_e[2]+0x1000000*m_m[2], 1024,0);
