@@ -5,11 +5,13 @@ il[65536]={};
 char buffer[0x400000]={};
 enum {BMASK=0x3FFFFF};
 int w,col,c1,c2,c3,bufpos,color;
-int s_m[15]={7, 7, 11, 8, 7, 8, 8, 8, 7, 9, 7, 9, 6, 8, 9};
 int m_m[6]={14, 33, 22, 25, 33, 23};
 int m_e[6]={128, 104, 240, 250, 149, 71};
 int m_s[6]={10, 12, 48, 62, 35, 9};
-
+int cm_sm[15]={};  // run
+int cm_cm1[15]={44, 34, 34, 37, 32, 36, 21, 29, 32, 30, 40, 35, 37, 41, 39}; // sm 1
+int cm_cm2[15]={14, 13, 14, 11, 23, 17, 14,  8, 14, 15, 21, 10, 13, 17, 18}; // sm 2
+int m_sm[2]={12,15};
 int buf(int i){
     return buffer[(bufpos-i)&BMASK];
 }
@@ -19,7 +21,7 @@ int sqrbuf(int i) {
 
 // update is called in VM after every bit
 int update(int y,int c0,int bpos,int c4,int pr){ 
-    int i,logvar,var,mean,cw;
+    int i,logvar,var,mean,cw,j,b;
     int hc3,hcw,hcwc1;
     if (bpos== 0){ 
         buffer[bufpos]=c4&0xff;
@@ -37,21 +39,22 @@ int update(int y,int c0,int bpos,int c4,int pr){
         hc3=h2(c3,0);
         hcw=h2(cw,0);
         hcwc1=h2(hcw, c1);
-        vmx(CM, 0,hc3);
-        vmx(CM, 0,h2(hc3, c1));
-        vmx(CM, 0,h2(h2(h2(++i, c3), c1), c2));
-        vmx(CM, 0,hcw);
-        vmx(CM, 0,hcwc1);
-        vmx(CM, 0,h2(hcwc1, c2));
-        vmx(CM, 0,h2(h2(h2(++i, (c3+cw)>>3), c1>>4), c2>>4));
-        vmx(CM, 0,h2(h2(++i,c1),c2));
-        vmx(CM, 0,h2(h2(++i, c3), c1-buf(4)));
-        vmx(CM, 0,h2(++i, c3+c1-buf(4)));
-        vmx(CM, 0,h2(hcw, c1-buf(w+1)));
-        vmx(CM, 0,h2(++i, cw+c1-buf(w+1)));
-        vmx(CM, 0,h2(h2(++i, buf(w*3-3)), buf(w*3-6)));
-        vmx(CM, 0,h2(h2(++i, buf(w*3+3)), buf(w*3+6)));
-        vmx(CM, 0,h2(h2(++i, mean), logvar>>4));
+        j=0;
+        vmx(CM, j++,hc3);
+        vmx(CM, j++,h2(hc3, c1));
+        vmx(CM, j++,h2(h2(h2(++i, c3), c1), c2));
+        vmx(CM, j++,hcw);
+        vmx(CM, j++,hcwc1);
+        vmx(CM, j++,h2(hcwc1, c2));
+        vmx(CM, j++,h2(h2(h2(++i, (c3+cw)>>3), c1>>4), c2>>4));
+        vmx(CM, j++,h2(h2(++i,c1),c2));
+        vmx(CM, j++,h2(h2(++i, c3), c1-buf(4)));
+        vmx(CM, j++,h2(++i, c3+c1-buf(4)));
+        vmx(CM, j++,h2(hcw, c1-buf(w+1)));
+        vmx(CM, j++,h2(++i, cw+c1-buf(w+1)));
+        vmx(CM, j++,h2(h2(++i, buf(w*3-3)), buf(w*3-6)));
+        vmx(CM, j++,h2(h2(++i, buf(w*3+3)), buf(w*3+6)));
+        vmx(CM, j++,h2(h2(++i, mean), logvar>>4));
         vmx(SCM, 0,c3+cw-buf(w+3));
         vmx(SCM, 1,c3+buf(w-3)-cw);
         vmx(SCM, 2,c3*2-buf(6));
@@ -62,6 +65,9 @@ int update(int y,int c0,int bpos,int c4,int pr){
         vmx(SCM, 7,cw+buf(w-3)-buf(w*2-3));
         vmx(SCM, 8,(mean>>1)|(logvar<<1&0x180));
     }
+    b=(c0<<(8-bpos)); 
+    vmx(SM, 0,(buf(3)+cw-buf(3+w)-b)<<3|bpos);
+    vmx(SM, 1,(cw-b)<<3|bpos);
     if (++col>=24) col=0;
     vmx(MX,0,5);               //   6
     vmx(MX,1,(c3+buf(6))>>6);  //   8
@@ -69,8 +75,6 @@ int update(int y,int c0,int bpos,int c4,int pr){
     vmx(MX,3,(c1>>4)*3+color); //  48
     vmx(MX,4,c0);              // 256
     //vmx(MX,5,0);  
-    //vmx(SMC,0,c0); 
-    //vmx(SMC,1,c0|(c1<<8)); 
     vmx(APM1,0,h2(h2(c0, c3), buf(6)));
     vmx(APM1,1,h2(h2(c0, buf(w)), buf(w*2)));
     return 0;
@@ -82,22 +86,12 @@ void block(int a,int b) {
 // main is called only once after VM init.
 int main() { 
     int x,i;
-    vms(0,2,0,1,10,0,1,6,1,5,0,0,0,0,0,0,0,0); 
+    vms(0,2,0,1,10,0,15,6,1,5,0,2,0,0,0,0,0,0); 
     vmi(ST,0,144,0,0);          // output prediction to input[0]
-    vmi(CM,0,4*4096,15+256*4,0); 
-    //for (i=0;i<15;i++) vmi(SM,i,16,8+s_m[i]*256,0);
-    //vmi(SMC,0,0x100,1023,0);
-    //vmi(SMC,1,0x10000,1023,0);
-    vmi(SCM,0,16,0,0);
-    vmi(SCM,1,16,0,0);
-    vmi(SCM,2,16,0,0);
-    vmi(SCM,3,16,0,0);
-    vmi(SCM,4,16,0,0);
-    vmi(SCM,5,16,0,0);
-    vmi(SCM,6,16,0,0);
-    vmi(SCM,7,16,0,0);
-    vmi(SCM,8,16,0,0);
+    for (i=0;i<15;i++) vmi(CM,i,1024,1+cm_sm[i]*256+cm_cm1[i]*0x10000+cm_cm2[i]*0x1000000,0);
+    for (i=0;i<9;i++)  vmi(SCM,i,16,0,0);
     vmi(SCM,9,9,0,0);
+    for (i=0;i<2;i++) vmi(SM,i,11,1+256*m_sm[i],0);
     //MX -> index,shift ,context limit ,inputsindex
     vmi(MX,0,m_s[0]+256*m_e[0] +0x1000000*m_m[0],6 ,0);    // pr[0]=mixer.p(input[0],5,6)      mix predictions from intput[0], shift final prediction by 5, with context upto 6, output to pr[x] //
         vmi(MM,0,0,0,1);        // input[1].add(pr[mixer(0)])       add prediction from pr[x] to input[1]
