@@ -18,11 +18,16 @@ int mtt[16]= { 0,0,1,2,3,4,5,5,6,6,6,6,7,7,7,7 };
 int primes[14]={ 0, 257,251,241,239,233,229,227,223,211,199,197,193,191 };
 int il[65536]={};
 // tuned on dickens
-int m_e[9]={574, 275, 344, 17, 94, 287, 282, 359, 14}; // mixer error
+int m_e[9]={400, 471, 83, 560, 624, 38, 243, 625, 7}; // mixer error
 int m_s[9]={2, 16, 35, 28, 12, 30, 31, 29, 5};// mixer shift
 int m_m[9]={22, 25, 16, 36, 27, 22, 26, 26, 27};// mixer error mul
 int c_r[21]={4, 3, 4, 2, 2, 7, 2, 6, 2, 2, 4, 4, 5, 3, 4, 4, 4, 4, 4, 4, 4};// contextmap run mul
-int c_s[21]={34, 37, 43, 33, 33, 34, 39, 32, 30, 37, 35, 38, 34, 40, 37, 32, 35, 31, 37, 36, 36};// contextmap pr mul
+int c_s[21]={29, 35, 36, 27, 33, 39, 32, 29, 30, 35, 33, 37, 27, 37, 35, 30, 45, 44, 34, 40, 26};// contextmap pr mul
+int c_s2[21]={9, 12, 12, 10,  3, 13,  9,  9,  9, 15,  9, 18, 10, 22, 14, 18, 11, 15, 12, 12, 16};// contextmap pr mul2
+//err->apm
+int apmfails;
+int e_l[8]={1027, 668, 687, 554, 825, 599, 861, 765};
+int e_h[8]={2275, 2066, 2191, 2114, 2199, 2246, 2123, 2181};
 
   int MAXLEN=2047; // longest allowed match + 1
   int tm[0x100000]={};    // hash table of pointers to contexts
@@ -104,10 +109,14 @@ int matchMod(int y,int bpos){
 
 // update is called in VM after every bit
 int update(int y,int c0,int bpos,int c4,int pr){
-  int i;
+  int i,j;
   int d,c;
   int col,h,above;
   int fl,matched,r,vv,ismatch,xi,f1;
+  apmfails=apmfails<<1;
+  j=y?pr^4095:pr;
+  j=vmx(ERR,bpos,j);
+  apmfails=apmfails|j;
   if (bpos== 0){
         c1=c4&0xff;
         buffer[pos&BMASK]=c1;
@@ -455,8 +464,8 @@ vmx(CM, xi,col<<16|(c1)<<8|above);
   
   vmx(MX,6,c);
   vmx(MX,7,(wtype&3)*8+bpos);
-  Misses=(Misses<<1)|((pr>>11)!=y);
-  vmx(APM1,0,(c0<<4)|(Misses&0xF));
+  //Misses=(Misses<<1)|((pr>>11)!=y);
+  vmx(APM1,0,(c0<<8)|(apmfails&0xFF));
   vmx(APM1,1,hash3(c0,w5&0xfffff,((wtype&0xFFF)<<16)|(tt&0x3F)));
   vmx(APM1,2,(c0*32)^hash3(wtype&0x1FF,x5&0x80ffff,frstchar));
   return 0;
@@ -467,35 +476,36 @@ void block(int a,int b) {
 // main is called only once after VM init.
 int main() { 
 int i,x;
-  vms( 0,3,0,2,5,3,21,8,1,8,0,0,1,0,0,0,0,0);
+  vms( 0,3,0,2,5,3,21,8,1,8,0,0,1,0,8,0,0,0);
   vmi(ST,0,144,0,0);
   vmi(SK,0,0,0,0);
   vmi(RCM,0,1024,0,0); //RCM(0) mem/4
   vmi(RCM,1,1024,0,0); //RCM(1) mem/4 400000 4194304/4096=1024
   vmi(RCM,2,2048,0,0); //RCM(2) mem/2 800000 8388608/4096=2048
-  vmi(CM,0,8*4096,5+c_s[0]*0x10000+256*c_r[0],0);  //CM(0) mem*32, 9 contexts //normal
-  vmi(CM,1,1*4096,6+c_s[1]*0x10000+256*c_r[1],0);   //indirect 1000000 /4096=4096
-  vmi(CM,2,4*4096,32+ c_s[2]*0x10000+256*c_r[2],0); //wordmodel
-  vmi(CM,3,2*4096,8+c_s[3]*0x10000+256*c_r[3],0);  //sparse
-  vmi(CM,4,4096/2,3+c_s[4]*0x10000+256*c_r[4],0); //record
-  vmi(CM,5,4096/2,3+c_s[5]*0x10000+256*c_r[5],0);  //record
-  vmi(CM,6,1*4096,3+c_s[6]*0x10000+256*c_r[6],0);   //record
-  vmi(CM,7,2*4096,3+c_s[7]*0x10000+256*c_r[7],0);   //record
-  vmi(CM,8,4096/2,11+c_s[8]*0x10000+256*c_r[8],0); //nest
-  vmi(CM,9,4096/4,1+c_s[9]*0x10000+256*c_r[9],0);
-  vmi(CM,10,4096,4+c_s[10]*0x10000+256*c_r[10],0);
-  vmi(CM,11,16*4096,5+c_s[11]*0x10000+256*c_r[11],0);// wordX
-  vmi(CM,12,4*4096,6+c_s[12]*0x10000+256*c_r[12],0);// word
-  vmi(CM,13,2*4096,1+c_s[13]*0x10000+256*c_r[13],0);// words
-  vmi(CM,14,  4096,1+c_s[14]*0x10000+256*c_r[14],0);// w4
-  vmi(CM,15,2*4096,1+c_s[15]*0x10000+256*c_r[15],0);// w4
-  vmi(CM,16,2*4096,1+c_s[16]*0x10000+256*c_r[16],0);// w4
-  vmi(CM,17,2*4096,1+c_s[17]*0x10000+256*c_r[17],0);// w4
-  vmi(CM,18,8*4096,1+c_s[18]*0x10000+256*c_r[18],0);// o6
-  vmi(CM,19,8*4096,1+c_s[19]*0x10000+256*c_r[19],0);// o8
-  vmi(CM,20,8*4096,1+c_s[20]*0x10000+256*c_r[20],0);// o13
+  vmi(CM,0,8*4096,5+c_s[0]*0x10000+256*c_r[0]+0x1000000*c_s2[0],0);  //CM(0) mem*32, 9 contexts //normal
+  vmi(CM,1,1*4096,6+c_s[1]*0x10000+256*c_r[1]+0x1000000*c_s2[1],0);   //indirect 1000000 /4096=4096
+  vmi(CM,2,4*4096,32+ c_s[2]*0x10000+256*c_r[2]+0x1000000*c_s2[2],0); //wordmodel
+  vmi(CM,3,2*4096,8+c_s[3]*0x10000+256*c_r[3]+0x1000000*c_s2[3],0);  //sparse
+  vmi(CM,4,4096/2,3+c_s[4]*0x10000+256*c_r[4]+0x1000000*c_s2[4],0); //record
+  vmi(CM,5,4096/2,3+c_s[5]*0x10000+256*c_r[5]+0x1000000*c_s2[5],0);  //record
+  vmi(CM,6,1*4096,3+c_s[6]*0x10000+256*c_r[6]+0x1000000*c_s2[6],0);   //record
+  vmi(CM,7,2*4096,3+c_s[7]*0x10000+256*c_r[7]+0x1000000*c_s2[7],0);   //record
+  vmi(CM,8,4096/2,11+c_s[8]*0x10000+256*c_r[8]+0x1000000*c_s2[8],0); //nest
+  vmi(CM,9,4096/4,1+c_s[9]*0x10000+256*c_r[9]+0x1000000*c_s2[9],0);
+  vmi(CM,10,4096,4+c_s[10]*0x10000+256*c_r[10]+0x1000000*c_s2[10],0);
+  vmi(CM,11,16*4096,5+c_s[11]*0x10000+256*c_r[11]+0x1000000*c_s2[11],0);// wordX
+  vmi(CM,12,4*4096,6+c_s[12]*0x10000+256*c_r[12]+0x1000000*c_s2[12],0);// word
+  vmi(CM,13,2*4096,1+c_s[13]*0x10000+256*c_r[13]+0x1000000*c_s2[13],0);// words
+  vmi(CM,14,  4096,1+c_s[14]*0x10000+256*c_r[14]+0x1000000*c_s2[14],0);// w4
+  vmi(CM,15,2*4096,1+c_s[15]*0x10000+256*c_r[15]+0x1000000*c_s2[15],0);// w4
+  vmi(CM,16,2*4096,1+c_s[16]*0x10000+256*c_r[16]+0x1000000*c_s2[16],0);// w4
+  vmi(CM,17,2*4096,1+c_s[17]*0x10000+256*c_r[17]+0x1000000*c_s2[17],0);// w4
+  vmi(CM,18,8*4096,1+c_s[18]*0x10000+256*c_r[18]+0x1000000*c_s2[18],0);// o6
+  vmi(CM,19,8*4096,1+c_s[19]*0x10000+256*c_r[19]+0x1000000*c_s2[19],0);// o8
+  vmi(CM,20,8*4096,1+c_s[20]*0x10000+256*c_r[20]+0x1000000*c_s2[20],0);// o13
   for (i=0;i<5;i++)
       vmi(SCM,i,16,0,0);
+      for (i=0;i<8;i++)  vmi(ERR,i,e_l[i]+(e_h[i]<<16),0,0);
   vmi(MX,0,m_s[0]+256*m_e[0]+0x1000000*m_m[0], 264,0);
   vmi(MX,1,m_s[1]+256*m_e[1]+0x1000000*m_m[1], 256,0);
   vmi(MX,2,m_s[2]+256*m_e[2]+0x1000000*m_m[2], 1024,0);
@@ -507,7 +517,7 @@ int i,x;
   for (i=0;i<8;i++)   
     vmi(MM,i,0,i,1);
   vmi(MX,8,m_s[8]+256*m_e[8]+0x1000000*m_m[8], 1,1);
-  vmi(APM1,0,0x1000,7,8);  //15
+  vmi(APM1,0,0x10000,7,8);  //15
   vmi(APM1,1,0x80000,7,8); //16
   vmi(APM1,2,0x40000,7,9); //17
   vmi(AVG,0,1|(1<<8),0,9+10*256);
